--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,16 @@ android {
         applicationId "ru.topbun.recipes"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    kapt {
+        arguments {
+            arg("room.schemaLocation", "$projectDir/schemas")
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -36,11 +40,7 @@ android {
     buildFeatures{
         viewBinding true
     }
-    kapt {
-        arguments {
-            arg("room.schemaLocation", "$projectDir/schemas")
-        }
-    }
+
 }
 
 dependencies {
@@ -54,7 +54,7 @@ dependencies {
     ksp "com.google.dagger:dagger-compiler:$dagger2"
 
 //    View
-    implementation 'com.squareup.picasso:picasso:2.1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
 //    Navigation
@@ -64,6 +64,7 @@ dependencies {
 //    JSON
     implementation ("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0")
     implementation ("com.google.code.gson:gson:2.9.0")
+    implementation 'org.jsoup:jsoup:1.16.2'
 
 //    Room
     implementation("androidx.room:room-runtime:$room_version")
