--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.main.FavoriteRecipeActivity"
+            android:name=".presentation.FavoriteRecipeActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
