--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="Рецепты. Большой сборник"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RecipeGroove"
+        android:theme="@style/Base.Theme.RecipeGroove"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
