--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@ buildscript {
     ext {
         agp_version = '8.1.2'
         agp_version1 = '8.1.1'
+        agp_version2 = '8.1.2'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.1.1' apply false
+    id 'com.android.application' version '8.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id "com.google.devtools.ksp" version "1.9.0-1.0.12"
     id "org.jetbrains.kotlin.jvm" version "1.9.0"
     id 'androidx.navigation.safeargs' version '2.5.1' apply false
+    id 'com.google.dagger.hilt.android' version '2.48.1' apply false
 }
