--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.SplashActivity"
+            android:name=".SplashActivity"
             android:screenOrientation="portrait"
             android:exported="true" >
             <intent-filter>
