--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
-    id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.dagger.hilt.android'
@@ -46,13 +45,13 @@ android {
 
 dependencies {
 
-    def room_version = "2.6.0"
+    def room_version = "2.6.1"
     def hilt = "2.48.1"
-    def nav_version = "2.5.3"
+    def nav_version = "2.7.5"
 
 //    Hilt
     implementation "com.google.dagger:hilt-android:$hilt"
-    kapt "com.google.dagger:hilt-compiler:$hilt"
+    ksp "com.google.dagger:hilt-compiler:$hilt"
 
 //    View
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -64,8 +63,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
 //    JSON
-    implementation ("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0")
-    implementation ("com.google.code.gson:gson:2.9.0")
+    implementation ("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1")
+    implementation ("com.google.code.gson:gson:2.10.1")
     implementation 'org.jsoup:jsoup:1.16.2'
 
 //    Room
@@ -74,11 +73,11 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
 
 //    ViewModel
-    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
+    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
