--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     def room_version = "2.6.1"
     def hilt = "2.48.1"
     def nav_version = "2.7.5"
+    def paging_version = "3.2.1"
+
+//    Paging3
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-common-ktx:$paging_version"
+    implementation 'androidx.paging:paging-common-android:3.3.0-alpha02'
 
 //    Hilt
     implementation "com.google.dagger:hilt-android:$hilt"
@@ -75,6 +81,7 @@ dependencies {
 //    ViewModel
     implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
 
+//    Default
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
